# pakka

./: .gitignore  .publish.sh  Cargo.toml  README.md  TODO.md  ci.sh
.cargo/: config.toml
docs/: README.md
docs/pages/: getting-started.md
pakka/: Cargo.toml  build.rs
pakka-gui/: Cargo.toml
pakka-gui/src/: main.rs
pakka/src/: lib.rs  main.rs
pakka/src/checks/: mod.rs
pakka/src/database/: event_sourcing_database.rs  mod.rs
pakka/src/file_system/: btrfs_file_system.rs  mod.rs  zfs_file_system.rs
pakka/src/package_manager/: apt_package_manager.rs  brew_package_manager.rs  dnf_package_manager.rs  mod.rs  nix_package_manager.rs  os_detection.rs  package_manager_detection.rs  pacman_package_manager.rs  scoop_package_manager.rs  zypper_package_manager.rs
src/: main.rs
