[package]
name = "pakka-gui"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
tokio = { version = "1", features = ["full"] }
iced = { version = "0.13", features = ["tokio"] }
pakka = { version = "0", path = "../pakka"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window"] }

[lints]
workspace = true
