[package]
name = "pakka-gui"
version = "0.0.5"
edition = "2021"
license = "AGPL-3.0"
authors = [
  "Ragnar Kruse <46799551+kruserr@users.noreply.github.com>",
]
repository = "https://github.com/kruserr/pakka"
homepage = "https://github.com/kruserr/pakka"
documentation = "https://github.com/kruserr/pakka/tree/master/docs/README.md"
readme = "../README.md"
description = "A cross platform meta package manager with auto snapshotting file system based transactions"
keywords = ["cli", "terminal", "utility"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
iced = { version = "0.13", features = ["tokio"] }
pakka = { version = "0", path = "../pakka"}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window"] }
