[package]
name = "pakka"
version = "0.0.3"
edition = "2021"
default-run = "pakka"
license = "AGPL-3.0"
authors = [
  "Ragnar Kruse <46799551+kruserr@users.noreply.github.com>",
]
repository = "https://github.com/kruserr/pakka"
homepage = "https://github.com/kruserr/pakka"
documentation = "https://github.com/kruserr/pakka/tree/master/docs/README.md"
readme = "../README.md"
description = "A cross platform meta package manager with auto snapshotting file system based transactions"
keywords = ["cli", "terminal", "utility"]
categories = ["command-line-utilities"]

[lints]
workspace = true

[dependencies]
clap = "4"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
